<resources>
    <string name="app_name">Getting Started How To </string>

    <string name="hello_world">Getting Started</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text">Edit Text</string>
    <string name="button_send">Send!</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="action_search">Search</string>
    <string name="no_lifecyle_info">No Life Cycle Info</string>
    <string name="called_restart">Called restart</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swap_fragment">Swap Fragment</string>
    <string name="hello_swaped_fragment">Hello Swaped Fragment</string>
    <string name="insert_value">insert value</string>
    <string name="clear_list">clear list</string>
    <string name="see_on_map">See on Map</string>
    <string name="go_to_drawer_activity">Go To Drawer Activity</string>
    <string name="title_activity_now_with_drawer">NowWithDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="return_home">Return Home</string>
</resources>
